--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -3,7 +3,7 @@
     <section class="span8 rounded-borders light-shadowed" style="background: #ffffff;">
 
 
-      <header class="out rounded-borders-btn">
+      <header class="out rounded-borders-top">
         <h2>Nueva Oferta</h2>
 
       </header>
