--- a/app/views/users/branches_company_user.html.erb
+++ b/app/views/users/branches_company_user.html.erb
@@ -3,7 +3,7 @@
     <section class="span8 rounded-borders light-shadowed">
       <h2 id="recommend-to-friend" class="pull-right rounded-borders light-shadowed" href="#newBranchModal" role="button" data-toggle="modal">Nueva sucursal</h2>
 
-      <header class="out rounded-borders-btn">
+      <header class="out rounded-borders-top">
         <h2>Sucursales</h2>
       </header>
 
