--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
     <section class="span8 rounded-borders light-shadowed" style="background: #ffffff;">
 
 
-      <header class="out rounded-borders-btn">
+      <header class="out rounded-borders-top">
         <h2>Información de Usuario</h2>
 
       </header>
@@ -157,7 +157,7 @@
         <section class="span8 rounded-borders light-shadowed" style="background: #ffffff;">
 
 
-          <header class="out rounded-borders-btn">
+          <header class="out rounded-borders-top">
             <h2>Información de Empresa</h2>
 
           </header>
