--- a/app/views/users/offers_client_user.html.erb
+++ b/app/views/users/offers_client_user.html.erb
@@ -6,7 +6,7 @@
         <h2 id="recommend-to-friend" class="pull-right rounded-borders light-shadowed">Ver mapa</h2>
       </a>
 
-      <header class="out rounded-borders-btn">
+      <header class="out rounded-borders-top">
         <h2>Ofertas</h2>
       </header>
 
