--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -7,7 +7,7 @@
       </a>
 
 
-      <header class="out rounded-borders-btn">
+      <header class="out rounded-borders-top">
         <h2>Ofertas</h2>
 
 
