--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id="main-content">
   <div class="row">
     <section class="span8 rounded-borders light-shadowed">
-      <header class="out rounded-borders-btn">
+      <header class="out rounded-borders-top">
         <h2>Mis Intereses</h2>
       </header>
       <div class="wrapper">
