--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -234,30 +234,33 @@
           </hr>
 
           <hr>
-          <p class="row">
+          <!--<p class="row">-->
 
-          <div class="span3"><b>Premio: </b>
-            <ul class="text-left">
+         <p><b>Premio: </b>
+
               <% i=1 %>
               <% offer.prizes.each do |prize| %>
-                  <li type="disc"><%= i %>) <%= prize.name %> - <%= prize.real_price %>(<%= prize.discount_percentage %>
-                    ).
-                  </li>
-                  <% i+=1 %>
+                  <%= i %>) <%= prize.name %> <br/><b>Precio:</b> $<%= prize.real_price %><br/><b>Descuento:</b>(%<%= prize.discount_percentage %>
+
+
+                  <% i+=1 %> )
               <% end %>
+         </p>
 
-            </ul>
+          <hr>
+          <p><b>Sucursal: </b>
+              <%= offer.branch.name unless offer.branch.nil? %>
+
+
+
+          </p> </hr>
+
+
 
 
           </div>
-          <div class="span3"><b>Sucursal: </b>
-            <ul class="text-left">
-              <li type="disc"> <%= offer.branch.name unless offer.branch.nil? %></li>
 
-
-            </ul>
-          </div>
-          </p>
+          <!--</p>-->
           </hr>
 
           </hr>
