style bugs fixed

--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -80,7 +80,7 @@
                       </div>
                   <%end%>
               <%end%>
-              <div id="add_claim_messages" style="margin-left: 15px; margin-top: 10px;">
+              <div id="add_claim_messages" style="margin-top: 10px;">
                 <%= f.link_to_add "Agregar premio", :prizes, :class => "button" %>
               </div>
           </div>
