--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -83,7 +83,7 @@
 
                               <div class="control-group clearfix">
                                 <label class="pull-left" for="inputPais">País</label>
-                                <%=address.input :country, :label => false, :required => true, :as => :select, :prompt => "Seleccione País", :collection => Country.all, :input_html =>{ :style=>"width: 164px;padding-left: 50px;margin-left: 93px;"} %>
+                                <%=address.input :country, :label => false, :required => true, :as => :select, :prompt => "Seleccione País", :collection => Country.all, :input_html =>{ :style=>"width: 164px;margin-left: 93px;"} %>
                               </div>
 
                           <% end %>
