--- a/app/assets/stylesheets/dealhunter.css
+++ b/app/assets/stylesheets/dealhunter.css
@@ -565,6 +565,11 @@ header#top nav ul {
     background: #c1beb6;
 }
 
+.small-photo {
+    width: 100%;
+    height: 240px;
+}
+
 #main-content header.out {
     padding: 20px 2.64%;
     background: #c1beb6;
@@ -1607,11 +1612,6 @@ input:focus {
     opacity: 1;
 }
 
-.modal-header{
-    -webkit-box-shadow: 9px 9px 13px -4px black;
-    -moz-box-shadow: 9px 9px 13px -4px black;
-    box-shadow: 9px 9px 13px -4px black;
-}
 
 #invitar-amigo-box{
    margin-top: 0;
@@ -1853,9 +1853,12 @@ input:focus {
 /* offer-small --------------------------- */
 
 .offer-small {
-    height: 194px;
-    background: #fff;
+    height: auto;
+    background: white;
     margin-bottom: 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: darkgray;
 }
 
 .offer-small .offer-price-box {
@@ -1895,7 +1898,7 @@ input:focus {
 
 .offer-small .users-watching,
 .offer-small .time-left {
-    width: 100px !important;
+    width: auto !important;
 }
 
 .offer-small .time-left li ul li ul li:first-child {
@@ -2072,6 +2075,10 @@ input:focus {
         width: 110px;
     }
 
+    .small-photo{
+        height: 180px;
+    }
+
 
 
     header#top nav {
@@ -2117,7 +2124,7 @@ input:focus {
     }
 
     #offer-listing-page .offer-small {
-        height: 154px;
+        height: 230px;
     }
 
     #offer-listing-page .offer-small .hotel-item li:last-child {
@@ -2141,6 +2148,10 @@ input:focus {
     body#landing {
         background: url(../assets/userbg.png) no-repeat center center fixed;
 
+    }
+
+    .small-photo{
+        height: 350px;
     }
 
     header#top {
@@ -2349,7 +2360,7 @@ input:focus {
     header#top #header-data {
         text-align: center;
         padding: 0px;
-        height: 182px;
+        height: 80px;
     }
 
     #header-data {
@@ -2424,7 +2435,7 @@ input:focus {
     }
 
     #offer-listing-page .offer-small {
-        height: 184px !important;
+        height: 360px;
     }
 
     .pull-right[class*="span"], .row-fluid .pull-right[class*="span"] {
@@ -2508,10 +2519,7 @@ input:focus {
     height: 325px;
 }
 
-.small-photo {
-    width: 300px;
-    height: 138px;
-}
+
 
 .list-photo {
     width: 110px;
