--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -24,7 +24,12 @@
                     <%=f.input :start_date, :as => :string, :input_html => {:class => 'datepicker pull-right input-medium datepicker'}, :label => false %>
                   </div>
 
+                  <div class="control-group clearfix">
+                    <label class="pull-left" for="inputEmail">Hora de inicio</label>
+                    <%=f.time_select :start_date, :ignore_date => true, :label => false, :input_html => { :class => "pull-right input-mini" } %>
 
+                    <%#=f.input :start_date, :ignore_date => true, :input_html => {:class => 'pull-right input-mini'}, :as => :string, :label => false %>
+                  </div>
 
 
                 </div><!--end wrapper-padding-->
@@ -42,6 +47,11 @@
                   <div class="control-group clearfix">
                     <label class="pull-left" for="inputEmail">Fecha de fin</label>
                     <%=f.input :end_date,:as => :string, :input_html => {:class => 'datepicker pull-right input-medium datepicker'}, :label => false %>
+                  </div>
+
+                  <div class="control-group clearfix">
+                    <label class="pull-left" for="inputEmail">Hora de fin</label>
+                    <%=f.time_select :end_date, :ignore_date => true, :label => false, :input_html => { :class => "pull-right input-mini" } %>
                   </div>
 
 
