Newsletter freq model, controller, edition view

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -140,6 +140,9 @@
         <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
           <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>        </ul>
+        <ul class="aside-nav">
+          <li><a href="<%= users_newsletter_freq_path %>">Frecuencia del newsletter</a></li>        </ul>
+        </ul>
       </div>
       <!--<div id="bags">-->
         <!--<div id="stage">-->
