--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -68,6 +68,8 @@
         <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
           <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>        </ul>
+        <ul class="aside-nav">
+          <li><a href="<%= users_newsletter_freq_path %>">Frecuencia del newsletter</a></li>        </ul>
         </ul>
       </div>
     </aside><!--end sidebar-->
