Change slogan in mails

--- a/app/views/contact_mailer_company/new_message_company.html.erb
+++ b/app/views/contact_mailer_company/new_message_company.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Dealhunter, Tu club privado de descuentos y ofertas.</title>
+  <title>Dealhunter, la publicidad revolucionada.</title>
   <style>
       a,
       a:hover {
