Add description to offer

--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -64,6 +64,11 @@
                 <label class="pull-left" for="inputEmail">Imagen</label>
                 <%=f.input :photo, :label => false, :input_html => { :class => "pull-right2 input-fullwidth", :placeholder => "Imagen" } %>
               </div>
+                  <div class="control-group clearfix">
+                    <label class="pull-left" for="inputEmail">Descripción</label>
+                    <%=f.input :description, :label => false, :input_html => { :class => "pull-right2 input-fullwidth", :placeholder => "Descripción", :style => "width: 300px; height: 100px; margin-left: 45px;" } %>
+                  </div>
+
               </div>
                 </div>
 
