--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,25 +1,137 @@
-<p id="notice"><%= notice %></p>
+<!--container-->
+<div class="container" id="main-content">
+  <div class="row">
+    <section class="span8">
+      <div class="wrapper-padding">
 
-<p>
-  <b>Company:</b>
-  <%= @offer.company_id %>
-</p>
+        <header>
+          <h2> <%= @offer.name%> </h2>
+          <h3> <%= @offer.branch.company.name %> / <%= @offer.branch.name%> </h3>
+        </header>
 
-<p>
-  <b>Name:</b>
-  <%= @offer.name %>
-</p>
+        <hr>
 
-<p>
-  <b>Start date:</b>
-  <%= @offer.start_date %>
-</p>
+        <!--end share-btns-->
 
-<p>
-  <b>End date:</b>
-  <%= @offer.end_date %>
-</p>
+        <article class="slider-wrapper theme-default">
+          <div id="slider" class="nivoSlider">
+            <% unless @offer.photo.nil? %>
+                <img class="carrousel-big-photo" src="<%= @offer.photo %>"
+                     style="height: 100%; width: 100%;" alt="" />
+            <%end%>
+          </div>
+        </article>
+
+        <article class="tabs-wrapper">
+          <ul id="myTab" class="nav nav-tabs 3tabs">
+            <li class="active"><a href="#detalles" data-toggle="tab">Detalles</a></li>
+            <li><a href="#mapas" data-toggle="tab">Mapa</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div class="tab-pane active" id="detalles">
+              <h5> Descripción </h5>
+              <p> <%= @offer.description %></p>
+
+              <h5> Fechas </h5>
+              <p>
+                <b>Fecha de inicio:</b>
+                <%= @offer.start_date.strftime("%d/%m/%y") %>
+              </p>
+              <p>
+                <b>Fecha de finalización:</b>
+                <%= @offer.end_date.strftime("%d/%m/%y") %>
+              </p>
+
+              <h5> Inscripciones </h5>
+              <p> <%= @offer.clients.count %> clientes inscriptos </p>
 
 
-<%= link_to 'Edit', edit_offer_path(@offer) %> |
-<%= link_to 'Back', offers_path %>
+            </div>
+
+            <div class="tab-pane" id="mapas" align="center">
+
+                falta poner el mapa con la @offer.branch
+
+            </div>
+
+          </div>
+        </article><!--end tabs-wrapper-->
+
+      </div>
+    </section> <!--end main content section-->
+
+    <!--sidebar-->
+    <aside class="span4">
+      <div class="row">
+        <div class="span4 clearfix" style="background-color: grey;">
+          <div class="clock-wrapper">
+
+            <div class="clock-title pull-left">
+              <i class="icon-white icon-time"></i> Quedan</li>
+            </div><!--end clock-wrapper-->
+            <div class="clock-numbers pull-right">
+              <ul class="inline">
+                <% distance = time_distance(@offer.start_date.to_datetime) %>
+                <ul class="inline" style="margin-top:8px;">
+                  <li><ul class="inline"><li><%= distance[:days] %></li><li>D</li></ul></li>
+                  <li><ul class="inline"><li><%= distance[:hours] %></li><li>H</li></ul></li>
+                  <li><ul class="inline"><li><%= distance[:minutes] %></li><li>M</li></ul></li>
+                </ul>
+              </ul>
+            </div><!--end clock-numbers-->
+
+          </div>
+        </div><!--end counter-->
+      </div><!--end row-->
+      <div class="row"><div class="span4">
+        <div class="wrapper-padding">
+
+          <%clients_offer = ClientsOffer.where(:client_id => Client.where(:user_id => @user.id).first.id, :offer_id => @offer.id) %>
+
+          <% unless @user.company? or !clients_offer.first.nil? %>
+              <%= link_to 'Inscribir', users_inscribe_path(:offer_id => @offer.id), { :type =>"button", :class => "btn btn-dealhunter medium full-width", :method => :post, } %>
+              <br>
+              <br>
+          <%end%>
+
+          <% if !clients_offer.first.nil?%>
+              <%= link_to 'Desinscribir', users_unsubscribe_path(:clients_offers_id => clients_offer.first.id, :offer_id => @offer.id ), { :type =>"button", :class => "btn btn-dealhunter medium full-width", :method => :post, } %>
+              <br>
+              <br>
+          <%end%>
+
+
+            <% i = 1 %>
+
+            <% @offer.prizes.each do |prize| %>
+              <div style="margin-bottom: 15px">
+                    <ul class="accord-tab clearfix">
+                      <li class="offer-number">Premio <%= i %> </li>
+                      <li class="offer-title pull-left">
+
+                        <h3><%=prize.name%></h3>
+                      </li>
+                      <li>
+                        <ul class="offer-price-box pull-right">
+                          <li class="offer-discount"><%= "-" + prize.discount_percentage.to_i.to_s + "%" unless prize.nil?%> </li>
+                          <li class="offer-price">$<%= prize.discounted_price unless prize.nil? %></li>
+                        </ul>
+                      </li>
+                    </ul><!--end tab oferta-->
+
+
+                    <% i= i +1 %>
+
+              </div>
+            <%end%>
+
+          </div>
+        </div><!--end wrapper padding-->
+      </div>
+      </div><!--end row-->
+
+    </aside><!--end sidebar-->
+
+  </div>
+</div>
