--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -90,13 +90,13 @@
                 <div class="wrapper-padding">
                   <ul class="inline hotel-item clearfix">
                     <li class="pull-left">
-                      <h4 class="media-heading"><a href="#offer_<%=offer.id%>" data-toggle="modal"><%=offer.name%></a></h4>
+                      <h4 class="media-heading"><a href="<%= offer_path(offer)%>"><%=offer.name%></a></h4>
                       <% unless offer.branch.nil? %>
                           <h5> <%=offer.branch.name%> </h5>
                       <%end%>
                     </li>
                     <li class="pull-right">
-                      <a href="#offer_<%=offer.id%>" data-toggle="modal"><button type="button" class="btn btn-dealhunter medium full-width rounded-borders-btn" id="btn-inscribite">Ver Oferta</button></a>
+                      <a href="<%= offer_path(offer)%>"><button type="button" class="btn btn-dealhunter medium full-width rounded-borders-btn" id="btn-inscribite">Ver Oferta</button></a>
                     </li>
                   </ul>
                 </div><!--end wrapper-padding-->
