--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
 
 
   <!-- Le styles -->
-
   <%= stylesheet_link_tag 'bootstrap.css' %>
   <%= stylesheet_link_tag 'formtastic.css' %>
   <%= stylesheet_link_tag 'dealhunter.css' %>
@@ -23,6 +22,12 @@
   <script src="/../assets/bootstrap-modal.js"></script>
   <script src="/../assets/jquery_nested_form.js"></script>
   <script src="/../assets/validationScript.js"></script>
+  <script src="/../assets/gmaps4rails/gmaps4rails.base.js.coffee"></script>
+  <script src="/../assets/gmaps4rails/gmaps4rails.bing.js.coffee"></script>
+  <script src="/../assets/gmaps4rails/gmaps4rails.googlemaps.js.coffee"></script>
+  <script src="/../assets/gmaps4rails/gmaps4rails.mapquest.js.coffee"></script>
+  <script src="/../assets/gmaps4rails/gmaps4rails.openlayers.js.coffee"></script>
+
 
 
   <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
