--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -15,7 +15,13 @@
         <div class="wrapper">
           <article>
 
-            <%= gmaps4rails(@json) %>
+
+            <%= gmaps("map_options" => {
+                    "zoom" => 13,
+                    "center_latitude" => 10,
+                    "center_longitude" => 10,
+                    "auto_adjust" => false,
+            }, "markers" => { "data" => @json }) %>
 
           </article>
 
