--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -6,19 +6,19 @@
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 800px;
+  width: 100%;
 }
 
 .gmaps4rails_map {
-  width: 800px;
-  height: 400px;
+  width: 100%;
+  height: 500px;
 }
 
 .bing_map {
    position: absolute;
    top: 20;
    left: 10;
-   width: 400px;
-   height: 400px;
+   width: 100%;
+   height: 100%;
    border:#555555 2px solid;
 }
