pages style & home button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,6 +122,12 @@
     <%= yield %>
     <%= yield :scripts %>
 
+    <div id="languages">
+      <a href="/users/home">
+        <img class="flag" src="/assets/bag2.png">
+     </a>
+    </div>
+
     <!--footer-->
 
     <footer id="footer-wrapper" class="dh-footer">
