--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -75,7 +75,7 @@
     <body id="page-micuenta">
 
     <!--header-->
-    <header id="top">
+    <header id="top" class="light-shadowed">
       <div class="container">
         <div class="row">
           <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
@@ -87,9 +87,9 @@
 
 
     <div class="container" id="main-content">
-      <div class="row">
+      <div class="row rounded-borders light-shadowed">
         <section class="span12">
-          <header class="out">
+          <header class="out rounded-borders-top">
             <h2>Contactanos</h2>
           </header>
 
