--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -73,11 +73,12 @@
     </head>
 
 
+
     <body id="page-micuenta">
 
     <!--header-->
-    <header id="top">
-      <div class="container">
+    <header id="top" class="light-shadowed">
+    <div class="container">
         <div class="row">
           <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
 
@@ -87,11 +88,12 @@
 
 
 
-    <div class="container" id="main-content">
-      <div class="row">
-        <section class="span12">
-          <header class="out">
-            <h2>Trabaja con Nosotros</h2>
+    <div class="container" id="main-content" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+         xmlns="http://www.w3.org/1999/html">
+      <div class="rounded-borders ">
+        <section class="span12 rounded-borders light-shadowed">
+          <header class="out rounded-borders-top">
+          <h2>Trabaja con Nosotros</h2>
           </header>
 
           <div class="wrapper-padding">
@@ -124,7 +126,7 @@
                       <%= form.text_area :body, :rows =>3, :style =>"width:97.8%;" %>
                       <hr>
                       <div class="text-center">
-                        <button type="submit" class="btn btn-dealhunter">Enviar</button>
+                        <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Enviar</button>
                       </div>
                     </fieldset>
                     <% end %>
