--- a/app/assets/stylesheets/dealhunter.css
+++ b/app/assets/stylesheets/dealhunter.css
@@ -208,6 +208,7 @@ header#top {
     margin-bottom: 40px;
     height: 92px;
     background: #FFF;
+
 }
 
 header#top nav {
@@ -1242,6 +1243,20 @@ footer {
     padding: 0px !important;
 }
 
+.floating-left-span{
+    height: 80px;
+    top: 150px;
+    position: fixed;
+    margin-left: 40px;
+    color: white;
+    margin-top: 40px;
+
+}
+
+.languages a:hover{
+    color: white;
+}
+
 /*-----------------------------------------------------------------------------------*/
 /*	Landing page only elements
 /*-----------------------------------------------------------------------------------*/
@@ -1321,6 +1336,51 @@ body#landing {
 
 #landing form {
     margin-top: 10px;
+}
+
+#languages{
+    position: fixed;
+    background-color: aquamarine;
+    padding: 10px;
+    top: 150px;
+    height: 80px;
+    width: 100px;
+    left: -40px;
+    right: auto;
+    box-shadow: 0 8px 20px #000000;
+    -webkit-transition: all 0.3s ease-in-out;
+
+    text-align: right;
+}
+
+#languages:hover {
+    transform: translateX(20px);
+    -webkit-transform: translateX(20px);
+    -moz-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    -o-transform: translateX(20px);
+}
+
+
+.flag{
+    width: 70px;
+    margin: 2px -2px 2px 2px;
+    cursor: pointer;
+}
+
+div.upload {
+    width: 157px;
+    height: 57px;
+    background: url(https://lh6.googleusercontent.com/-dqTIJRTqEAQ/UJaofTQm3hI/AAAAAAAABHo/w7ruR1SOIsA/s157/upload.png);
+    overflow: hidden;
+}
+
+div.upload input {
+    display: block !important;
+    width: 157px !important;
+    height: 57px !important;
+    opacity: 0 !important;
+    overflow: hidden !important;
 }
 
 /* labels --------------------------- */
@@ -2345,8 +2405,11 @@ input:focus {
     #offer-listing-page .button-arrow {
         display: none;
     }
+    #languages{
+        top: 250px;
+    }
 
-}
+    }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
@@ -2355,6 +2418,16 @@ input:focus {
     body#landing {
         background: url(../assets/userbg.png) no-repeat center center fixed;
 
+    }
+
+    #languages{
+        top: 250px;
+        height: 50px;
+        width: 70px;
+    }
+
+    .flag{
+        width: 40px;
     }
 
     header#top nav {
