--- a/app/views/pages/form_company.html
+++ b/app/views/pages/form_company.html
@@ -78,7 +78,7 @@
 <body id="page-micuenta">
 
 <!--header-->
-<header id="top">
+<header id="top" class="light-shadowed">
     <div class="container">
         <div class="row">
             <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
@@ -91,11 +91,12 @@
 <!--end header-->
 
 
-<div class="container" id="main-content">
-    <div class="row">
-        <section class="span12">
-            <header class="out">
-                <h2>Alta empresa</h2>
+<div class="container" id="main-content" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+     xmlns="http://www.w3.org/1999/html">
+    <div class="rounded-borders ">
+        <section class="span12 rounded-borders light-shadowed">
+            <header class="out rounded-borders-top">
+            <h2>Alta empresa</h2>
             </header>
 
             <div class="wrapper-padding">
