--- a/app/views/pages/terms_and_conds.html.erb
+++ b/app/views/pages/terms_and_conds.html.erb
@@ -76,8 +76,8 @@
     <body id="page-micuenta">
 
     <!--header-->
-    <header id="top">
-      <div class="container">
+    <header id="top" class="light-shadowed">
+    <div class="container">
         <div class="row">
           <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
 
@@ -89,10 +89,10 @@
 
     <div class="container" id="main-content" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
          xmlns="http://www.w3.org/1999/html">
-    <div class="row">
-    <section class="span12">
-    <header class="out">
-      <h2>TERMINOS Y CONDICIONES</h2>
+    <div class="rounded-borders ">
+    <section class="span12 rounded-borders light-shadowed">
+    <header class="out rounded-borders-top">
+    <h2>TERMINOS Y CONDICIONES</h2>
     </header>
 
     <div class="wrapper-padding">
